<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/xr_layout"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <ImageView
      android:id="@+id/img_logo"
      android:layout_width="130dp"
      android:layout_height="130dp"
      android:contentDescription="@string/proshno_logo"
      android:src="@drawable/proshno_logo"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />
  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:textColorHint="@android:color/white"
      android:hint="@string/username_hint"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      >
    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_username"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_password"
      android:textColorHint="@android:color/white"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:layout_marginTop="6dp"
      android:hint="@string/password_hint"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_layout_username"
      >
    <android.support.design.widget.TextInputEditText
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        />
  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/btn_login"
      fontPath="fonts/Raleway-Bold.ttf"
      android:background="@drawable/round_button"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/tv_no_account"
      app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
      android:text="@string/sign_in"
      android:textColor="@android:color/black"
      android:layout_marginTop="35dp"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      />

  <TextView
      android:id="@+id/tv_no_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/no_account"
      android:textColor="@android:color/white"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_login"
      fontPath="fonts/Raleway-SemiBold.ttf"
      />
</android.support.constraint.ConstraintLayout>