<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
  <ImageView
      android:id="@+id/img_logo"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:contentDescription="@string/proshno_logo"
      android:src="@drawable/proshno_logo"
      />

  <android.support.v7.widget.CardView
      android:id="@+id/home_content_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="30dp"
      android:layout_marginTop="15dp"
      android:background="@drawable/home_background"
      app:cardCornerRadius="5dp"
      >
    <android.support.constraint.ConstraintLayout
        android:id="@+id/home_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        >
      <TextView
          android:id="@+id/tv_username"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="15dp"
          android:text="xcutionerzen"
          />
      <ImageView
          android:id="@+id/img_avatar"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_username"
          android:layout_marginTop="6dp"
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:src="@drawable/avatar_panda"
          android:contentDescription="@string/avatar"
          />
      <TextView
          android:id="@+id/tv_current_winnings_amount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/img_avatar"
          android:layout_marginTop="5dp"
          android:textSize="32sp"
          android:textColor="@color/colorYellow"
          android:text="৳500"
          />
      <View
          android:id="@+id/divider_1"
          android:layout_marginTop="10dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          app:layout_constraintTop_toBottomOf="@+id/tv_current_winnings_amount"
          style="@style/dividerHorizontal"/>
      <TextView
          android:id="@+id/tv_next_game_at_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/divider_1"
          android:layout_marginTop="15dp"
          android:text="@string/next_game_at"
          />
      <TextView
          android:id="@+id/tv_next_game_at_time_value"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tv_next_game_at_title"
          android:textSize="32sp"
          fontPath="fonts/Raleway-Bold.ttf"
          android:textColor="@color/colorPrimary"
          android:text="05:30"
          />
      <TextView
          android:id="@+id/tv_next_game_at_time_period"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="10dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tv_next_game_at_time_value"
          android:text="PM (BST)"
          />
      <View
          android:id="@+id/divider_2"
          android:layout_marginTop="10dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          app:layout_constraintTop_toBottomOf="@+id/tv_next_game_at_time_period"
          style="@style/dividerHorizontal"/>
      <ImageView
          android:id="@+id/img_leaderboard"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:layout_marginTop="20dp"
          app:layout_constraintTop_toBottomOf="@+id/tv_next_game_at_time_period"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toLeftOf="@+id/img_extra_lives"
          android:src="@drawable/ic_trophy"
          android:contentDescription="@string/img_description_leaderboard"
          />
      <TextView
          android:id="@+id/tv_leaderboard"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="15dp"
          app:layout_constraintTop_toBottomOf="@+id/img_leaderboard"
          app:layout_constraintLeft_toLeftOf="@+id/img_leaderboard"
          android:text="Leaderboard"
          />
      <ImageView
          android:id="@+id/img_extra_lives"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:layout_marginTop="20dp"
          app:layout_constraintTop_toBottomOf="@+id/tv_next_game_at_time_period"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintLeft_toRightOf="@+id/img_leaderboard"
          android:src="@drawable/ic_heart"
          android:contentDescription="@string/img_description_extra_lives"
          />
      <TextView
          android:id="@+id/tv_extra_lives"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="15dp"
          app:layout_constraintTop_toBottomOf="@+id/img_extra_lives"
          app:layout_constraintLeft_toLeftOf="@+id/img_extra_lives"
          android:text="@string/get_extra_lives"
          />
    </android.support.constraint.ConstraintLayout>
  </android.support.v7.widget.CardView>
</LinearLayout>